# my-tiny-jpeg-viewer

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
src/application/: jfif.rs  mod.rs
src/bitstream/: mod.rs
src/component/: frame.rs  mod.rs  scan.rs
src/decode/: chroma.rs  dct.rs  mcu.rs  mod.rs
src/dht/: huffman.rs  mod.rs
src/dqt/: mod.rs
src/segment/: mod.rs
src/ui/: mod.rs
src/zigzag/: mod.rs
